@startuml - UML DatabaseModel for SoulAndTalk
hide circle

/'Relationer
SPAREPARTS(<ins>SparePartId</ins> SparePartType, SparePartAmount)
STATION(<ins>StationId</ins>, StationType, StationsName, *SparePartId*)
BRAKECALIPER(<ins>CaliperId</ins>, CaliperType, CaliperStatus, Barcode, CaliperNumber, OrderNumber, Note, *StationId*)
'/
class "GUEST" <<table>>{
    {static} <<PK>> GuestId : Int
    {field} Name : NVarChar(50)
    {field} Phone : NVarChar(12)
    {field} Email : NVarChar(50)
    {field} ConsentStatus : NVarChar(50)
    //<<FK>> PodcastEpisodeId : Int//
    //<<FK>> CitizenId : Int//
    {method} <<PK>> PK_GUEST()
}

class "CITIZEN" <<table>>{
    {static} <<PK>> CitizenId : Int
    {field} Name : NVarChar(50)
    {field} CprNumber : NVarChar(10)
    {field} WorkStatus : NVarChar(50)
    {field} WorkType : NVarChar(50)
    {field} ConsentStatus : Bit
    {field} CurrentStatus : NVarChar(50)
    {field} SpecialConsiderations : NVarChar(255)
    //<<FK>> CaseOfficerId : Int//
    {method} <<PK>> PK_CITIZEN()
    {method} <<FK>> FK_CITIZEN_CASEOFFICER()
}


class "CASEOFFICER" <<table>>{
    {static} <<PK>> CaseOfficerId : Int
    {field} Name : NVarChar(50)
    {field} Department : NVarChar(50)
    {field} Phone : NVarChar(12)
    {field} Email : NVarChar(50)
    {method} <<PK>> PK_CASEOFFICER()
    
}

class "PODCASTEPISODE" <<table>>{
    {static} <<PK>> PodcastEpisodeId : Int
    {field} Title : NVarChar(50)
    {field} Date : DateTime2
    {field} Duration : Time
    {field} Status : NVarChar(255)
    {field} MeetingPlace : NVarChar(255)
    {field} Note : NVarChar(255)
    //<<FK>> GuestId : Int//
    //<<FK>> CaseOfficerId : Int//
    {method} <<PK>> PK_PODCASTEPISODE()
    {method} <<FK>> FK_PODCASTEPISODE_GUEST()
    {method} <<FK>> FK_PODCASTEPISODE_CASEOFFICER()

class "PodcastEpisodeGuests" <<table>>{
    {static} <<PK>> PodcastEpisodeId : Int
    {static} <<PK>> GuestId : Int
    //<<FK>> PodcastEpisodeId : Int//
    {method} <<PK>> PK_PODCASTEPISODEGUESTS()
    {method} <<FK>> FK_PODCASTEPISODEGUESTS_PODCASTEPISODE()
    {method} <<FK>> FK_PODCASTEPISODEGUESTS_GUEST()
}

'relationer'
CASEOFFICER "1" -- "0..*" PODCASTEPISODE
CASEOFFICER "1" -- "0..*" CITIZEN
CITIZEN "1" -- "1" GUEST
PODCASTEPISODE "0..*" -- "1" GUEST
PodcastEpisodeGuests "0..*" -- "1" PODCASTEPISODE


@enduml